--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pretest": "npm run build"
   },
   "dependencies": {
-    "js-cookie": "^2.2.0"
+    "js-cookie": "^2.2.0",
+    "uuid-js": "^0.7.5"
   },
   "devDependencies": {
     "aurelia-tools": "^1.0.0",
