change karma browser to firefox

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js:
-  # - "iojs"
-  # - "7"
-  - "8"
+  # - "8"
   - "lts/*"
   - "node"
 
@@ -12,6 +10,7 @@ before_script:
   - npm i
 
 scripts:
+  - npm run lint
   - npm run test -- --browsers Firefox --single-run
 
 notifications:
