--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
+
 node_js:
   # - "8"
   - "lts/*"
   - "node"
+
+addons:
+  chrome: stable
+  firefox: latest
 
 before_script:
   - export DISPLAY=:99.0
