--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.0",
     "karma-jspm": "2.2.2",
     "object.assign": "^4.0.4",
