--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ before_script:
 
 scripts:
   - sed -e "s|singleRun: false|singleRun: true|g" -i karma.conf.js
+  - cat karma.conf.js
   - npm run lint
-  - npm run test -- --browsers Firefox --single-run
+  - npm run test
 
 notifications:
   slack:
