--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "dependencies": {},
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0",
-      "js-cookie": "^2.2.0"
+      "js-cookie": "^2.2.0",
+      "uuid-js": "^0.7.5"
     }
   }
 }
